<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    tools:context="com.example.warbl.horoscopofinal.Registro">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_registrase"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorNaranjo"
        />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_usuario"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorVerde"
        />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nombre"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorVerde"
        />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_apellido"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorVerde"
        />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_pass"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorVerde"
        />

    <Button
        android:id="@+id/btn_Registrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/txt_registrase"
        android:background="@color/colorVerde"
        android:textColor="@color/colorFondo"
        android:onClick="Agregar"
        />

    <TextView
        android:id="@+id/txt_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_volver"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorRojo"
        />

</LinearLayout>
