<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorFondo"
    tools:context="com.example.warbl.horoscopofinal.Eliminar">

    <TextView
        android:id="@+id/TituloCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cancelar"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorRojo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/eliminarUsuario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_usuario"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_eliminar"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@color/colorRojo"
        android:textColor="@color/colorFondo"
        />

</LinearLayout>
