<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.warbl.horoscopofinal.Home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/txtNombreApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="-28dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorNaranjo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_fechan"
        android:textSize="15sp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TableRow>
            <ImageView
                android:id="@+id/img_acuario"
                android:background="@drawable/acuario2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_piscis"
                android:background="@drawable/piscis2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_aries"
                android:background="@drawable/aries2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_tauro"
                android:background="@drawable/tauro2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_geminis"
                android:background="@drawable/geminis2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_cancer"
                android:background="@drawable/cancer2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />


        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_dias"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        />

    <Spinner
        android:id="@+id/spinner_dias"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-25dp"
        >
    </Spinner>

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_mes"
        android:layout_marginLeft="100dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />

    <Spinner
        android:id="@+id/spinner_mes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-25dp"
        >
    </Spinner>

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_anio"
        android:layout_marginLeft="100dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        />

    <Spinner
        android:id="@+id/spinner_anio"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-25dp"
        >
    </Spinner>

    <Button
        android:id="@+id/btnPrediccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_Prediccion"
        android:layout_gravity="center"
        android:background="@color/colorVerde"
        android:textColor="@color/colorFondo"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <TableRow>
            <ImageView
                android:id="@+id/img_leo"
                android:background="@drawable/leo2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_virgo"
                android:background="@drawable/virgo2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_libra"
                android:background="@drawable/libra2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_escorpion"
                android:background="@drawable/escorpion2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_sagitario"
                android:background="@drawable/sagitario2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

            <ImageView
                android:id="@+id/img_capricornio"
                android:background="@drawable/capricornio2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/salir"
        android:background="@color/colorNaranjo"
        android:textColor="@color/colorFondo"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/DarseBaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/txt_eliminar"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorRojo"
        android:textSize="16sp"
        />

</LinearLayout>
